# fastapi-book-catalog

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/models/: book.py  crud_book.py  database.py
app/routers/: book.py
tests/integration/: test_book.py
tests/unit/: test_crud_book.py
